fix: uneven width for employee cards

--- a/src/app/employee/employee.component.css
+++ b/src/app/employee/employee.component.css
@@ -1,5 +1,4 @@
 .employee {
-  width: calc(100% - 4rem);
   margin: 0 1rem;
   border: 1px solid gray;
   box-shadow: none;
